--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,5 @@ dependencies = [
     "uuid>=1.30",
     "livekit-agents[mcp,rtc]~=1.3",
     "elevenlabs>=2.27.0",
+    "huggingface-hub>=0.36.0",
 ]
