--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
-    "fastapi>=0.128.0",
+    "fastapi[all]>=0.128.0",
     "livekit[mcp]>=1.0.23",
     "livekit-plugins-elevenlabs>=1.3.10",
     "livekit-plugins-google>=1.3.10",
