Some updates following recent changes in the /src directory

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ LIVEKIT_API_SECRET = "your-livekit-api-secret-here"
 LIVEKIT_URL = "your-live_kit_url_here"
 GOOGLE_API_KEY= "your_groogle_generative_ai_api_key or use openai for GPT models"
 GROQ_API_KEY= "your_eleven_labs_api_key_here or any Text-To-Speech platoform you want"
+OPENWEATHER_API_KEY="Your_OPEN_WEATHER_API_KEY here"
